--- a/Learn_TS_from_Zero/Page Color Change/index.html
+++ b/Learn_TS_from_Zero/Page Color Change/index.html
@@ -24,18 +24,18 @@
     <button id="softred">Soft Red</button>
 
     <script>
-        document.getElementById("blue").onclick = function() {
-            document.body.style.backgroundColor = "lightblue";
-        };
-        document.getElementById("green").onclick = function() {
-            document.body.style.backgroundColor = "lightgreen";
-        };
-        document.getElementById("mint").onclick = function() {
-            document.body.style.backgroundColor = "lightseagreen";
-        };
-        document.getElementById("softred").onclick = function() {
-            document.body.style.backgroundColor = "lightcoral";
-        };
+        // document.getElementById("blue").onclick = function() {
+        //     document.body.style.backgroundColor = "lightblue";
+        // };
+        // document.getElementById("green").onclick = function() {
+        //     document.body.style.backgroundColor = "lightgreen";
+        // };
+        // document.getElementById("mint").onclick = function() {
+        //     document.body.style.backgroundColor = "lightseagreen";
+        // };
+        // document.getElementById("softred").onclick = function() {
+        //     document.body.style.backgroundColor = "lightcoral";
+        // };
     </script>
 </body>
 </html>
